syntax = "proto3";

package report;

option go_package = "./proto";

service ReportService {
  rpc GenerateReport(ReportRequest) returns (ReportResponse);
  rpc GetTimeSeriesData(TimeSeriesRequest) returns (TimeSeriesResponse);
}

message ReportRequest {
  int64 start_timestamp = 1;
  int64 end_timestamp = 2;
  repeated string metrics = 3;
}

message ReportResponse {
  bytes pdf_data = 1;
  int32 page_count = 2;
  string generated_at = 3;
}

message TimeSeriesRequest {
  string key = 1;
  int64 start_timestamp = 2;
  int64 end_timestamp = 3;
}

message TimeSeriesResponse {
  repeated DataPoint data_points = 1;
  string key = 2;
}

message DataPoint {
  int64 timestamp = 1;
  double value = 2;
}
